# resume-analyzer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
backend/app/: main.py
backend/app/db/: database.py  models.py
backend/app/routes/: analyze.py
backend/app/schemas/: response_schema.py
backend/app/services/: embedding_service.py  llm_service.py  parser_service.py
frontend/: streamlit_ui.py
