[project]
name = "resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "fastapi[standard]>=0.135.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.9.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
